--- a/cli/node/package.json
+++ b/cli/node/package.json
@@ -8,7 +8,7 @@
     "artifacts": "napi artifacts",
     "build": "napi build --platform --release",
     "build:debug": "napi build --platform",
-    "prepublishOnly": "napi prepublish -t npm",
+    "prepublishOnly": "napi prepublish -t npm --gh-release-id $RELEASE_ID",
     "version": "napi version"
   },
   "repository": {
