--- a/.github/workflows/publish-napi.yml
+++ b/.github/workflows/publish-napi.yml
@@ -94,7 +94,7 @@ jobs:
               pnpm build --target aarch64-unknown-linux-musl &&
               /aarch64-linux-musl-cross/bin/aarch64-linux-musl-strip *.node
 
-    name: napi - ${{ matrix.settings.target }} - node@16
+    name: napi - ${{ matrix.settings.target }} - node@18
     runs-on: ${{ matrix.settings.host }}
     steps:
       - uses: actions/checkout@v3
@@ -105,7 +105,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: 18
           check-latest: true
           cache: 'pnpm'
           cache-dependency-path: '**/pnpm-lock.yaml'
@@ -165,15 +165,13 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: 18
           check-latest: true
           cache: pnpm
           cache-dependency-path: '**/pnpm-lock.yaml'
 
       - name: Install dependencies
-        run: |
-          cd ..
-          pnpm install -w --filter .
+        run: pnpm install -w --filter .
 
       - name: Download all artifacts
         uses: actions/download-artifact@v3
